@@ -2,8 +2,13 @@
 | This is a quote:          |
 |                           |
 |    I think therefore I am |
+|                           |
+|    * A list               |
+|                           |
 +---------------------------+
 
 This is a quote:          
                           
    I think therefore I am 
+
+   * A list
